--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> G3 Architects</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        
+        *{
+            font-family: 'Work Sans', sans-serif;
+
+        }
+        ul{
+            display: flex;
+        }
+        nav li{
+            display: flex;
+            padding :10px;
+        }
+
     </style>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li><a href="">Home </a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Log in</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
